--- a/Client-Side/package.json
+++ b/Client-Side/package.json
@@ -28,5 +28,8 @@
 		"svelte": "^5.0.0",
 		"tailwindcss": "^4.0.6",
 		"vite": "^6.0.0"
+	},
+	"dependencies": {
+		"@botpress/webchat": "2.3"
 	}
 }
