--- a/Client-Side/package.json
+++ b/Client-Side/package.json
@@ -30,7 +30,8 @@
 		"vite": "^6.0.0"
 	},
 	"dependencies": {
-		"firebase": "^11.3.1",
-		"@botpress/webchat": "2.3"
+		"@botpress/webchat": "2.3",
+		"@tinymce/tinymce-svelte": "^3.0.0",
+		"firebase": "^11.3.1"
 	}
 }
