--- a/Server-Side/package.json
+++ b/Server-Side/package.json
@@ -27,6 +27,13 @@
 		"vite": "^6.0.0"
 	},
 	"dependencies": {
-		"express": "^4.21.2"
+		"bcrypt": "^5.1.1",
+		"cors": "^2.8.5",
+		"express": "^4.21.2",
+		"morgan": "^1.10.0",
+		"sqlite": "^5.1.1",
+		"sqlite3": "^5.1.7",
+		"yoo": "^1.8.7",
+		"yup": "^1.6.1"
 	}
 }
